--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,12 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem consectetur illo sunt at, voluptas sit ullam cum cupiditate, voluptatibus magni alias tempore officiis quis vero dolorem recusandae aspernatur dolores laborum.</p>
             <p>Suscribete</p>
         </div>
+
+        <footer class="bg-success text-center text-white py-3">
+            <p>Blog by Consu</p>
+        </footer>
     </div>
+
     
 </body>
 </html>
